# shell-helper

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/command/: mod.rs
src/command/copy_command/: copy.rs  copy_local.rs  copy_remote.rs  mod.rs
src/command/read_command/: read.rs
src/command/size_command/: size.rs
src/console_utils/: console_utils.rs  mod.rs
