[package]
name = "shell-helper"
version = "0.1.0"
edition = "2021"
description = "A simple to use, efficient, and full-featured Shell function"
#repository = "https://github.com/sunjay/brain"
#readme = "README.md"
keywords = ["cli"]
categories = ["command-line-interface"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
log = "0.4.21"
rayon = "1.9.0"
tempfile = "3.10.1"
ssh2 = "0.9.4"
regex = "1.10.3"
rpassword = "7.3.1"

