[package]
name = "smp"
version = "0.0.1"
edition = "2021"
description = "A simple to use, efficient, and full-featured Shell function"
#repository = "https://github.com/sunjay/brain"
#readme = "README.md"
keywords = ["cli"]
categories = ["command-line-interface"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rust cmd app library
clap = { version = "4.5.2", features = ["derive"] }
log = "0.4.21"
rayon = "1.9.0"
tempfile = "3.10.1"
ssh2 = "0.9.4"
# regex
regex = "1.10.3"
# 콘솔에서 패스워드 안보이게 받기
rpassword = "7.3.1"
# 콘솔 유틸
termion = "3.0.0"
# 유니코드 문자열 길이 계산
unicode-width = "0.1.11"


